--- a/_layouts/code.html
+++ b/_layouts/code.html
@@ -1,8 +1,10 @@
 ---
 layout: wraper
+author: "Kandy"
 ---
 
 <h1>My custom Code layout</h1>
 <hr>
 
+<h3>{{layout.author}}</h3>
 <p>{{content}}</p>
