Use include to pass some components values to diff pages

--- a/_layouts/wraper.html
+++ b/_layouts/wraper.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Wapper LAyout</h2>
+    
+    {% include header.html %}
     <hr>
     {{content}}
 </body>
